--- a/test/index.html
+++ b/test/index.html
@@ -1,2 +1,6 @@
 <div id="root"></div>
+<link
+  href="https://cdn.jsdelivr.net/gh/masx200/masx200.github.io@4.3.3/main.b9c7ffd191cff11a9b96.css"
+  rel="stylesheet"
+/>
 <script type="module" src="./index.js"></script>
