--- a/test/index.html
+++ b/test/index.html
@@ -2,7 +2,7 @@
   href="https://cdn.jsdelivr.net/gh/masx200/masx200.github.io@4.3.3/main.b9c7ffd191cff11a9b96.css"
   rel="stylesheet"
 />
-<script src="https://cdn.staticfile.org/webcomponentsjs/2.2.10/webcomponents-bundle.js"></script>
+<script src="https://cdn.staticfile.org/custom-elements/1.2.4/custom-elements.min.js"></script>
 <div id="root"></div>
 
 <script type="module" src="./index.js"></script>
