优化代码,测试style的对象写法

--- a/test/index.html
+++ b/test/index.html
@@ -4,5 +4,5 @@
 />
 <script src="https://cdn.staticfile.org/custom-elements/1.2.4/custom-elements.min.js"></script>
 <div id="root"></div>
-
 <script type="module" src="./index.js"></script>
+<div id="app"></div>
