--- a/test/index.html
+++ b/test/index.html
@@ -1,8 +1,19 @@
-<link
-  href="https://cdn.jsdelivr.net/gh/masx200/masx200.github.io@4.3.3/main.b9c7ffd191cff11a9b96.css"
-  rel="stylesheet"
-/>
-<script src="https://cdn.staticfile.org/custom-elements/1.2.4/custom-elements.min.js"></script>
-<div id="root"></div>
-<script type="module" src="./index.js"></script>
-<div id="app"></div>
+<!DOCTYPE html>
+
+<html lang="en">
+  <head>
+    <link
+      href="https://cdn.jsdelivr.net/gh/masx200/masx200.github.io@4.3.3/main.b9c7ffd191cff11a9b96.css"
+      rel="stylesheet"
+    />
+  </head>
+  <body>
+    <div id="root"></div>
+
+    <div id="app"></div>
+    <script type="module" src="./index.js"></script>
+    <!--    <script src="./index-es5.js"></script> -->
+  </body>
+</html>
+
+<!-- <script src="https://cdn.staticfile.org/custom-elements/1.2.4/custom-elements.min.js"></script> -->
