--- a/test/index.html
+++ b/test/index.html
@@ -8,7 +8,7 @@
     />
   </head>
   <body>
-    <script type="module" src="./index2.js"></script>
+    <!-- <script type="module" src="./index2.js"></script> -->
     <div id="root"></div>
 
     <div id="app"></div>
