--- a/test/index.html
+++ b/test/index.html
@@ -12,8 +12,9 @@
     <div id="root"></div>
 
     <div id="app"></div>
-    <script type="module" src="./index.js"></script>
+    <!-- <script type="module" src="./index.js"></script> -->
     <!--    <script src="./index-es5.js"></script> -->
+    <script src="./index-es2015.js" type="module"></script>
   </body>
 </html>
 
