--- a/test/index.html
+++ b/test/index.html
@@ -7,7 +7,7 @@
       rel="stylesheet"
     />
     <script src="https://cdn.bootcss.com/babel-polyfill/7.6.0/polyfill.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/gh/masx200/webpack-react-vue-spa-awesome-config@2.4.4/lib/polyfill.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/gh/masx200/webpack-react-vue-spa-awesome-config@2.4.5/polyfill/dist/polyfill.min.js"></script>
   </head>
   <body>
     <!-- <script type="module" src="./index2.js"></script> -->
