--- a/test/index.html
+++ b/test/index.html
@@ -3,9 +3,44 @@
 <html>
   <head>
     <link
-      href="https://cdn.jsdelivr.net/gh/masx200/masx200.github.io@4.3.3/main.b9c7ffd191cff11a9b96.css"
+      href="https://cdn.bootcss.com/mui/3.7.1/css/mui.min.css"
       rel="stylesheet"
     />
+    <link
+      href="https://cdn.jsdelivr.net/gh/masx200/masx200.github.io@4.2.2/src/assetscss/github-6556dfa9be535e551ffffaadfecdad99.min.css"
+      rel="stylesheet"
+    />
+    <link
+      href="https://cdn.jsdelivr.net/gh/masx200/masx200.github.io@4.2.2/src/assetscss/github-frameworks-a2fba223d5af91496cac70d4ec3624df.min.css"
+      rel="stylesheet"
+    />
+    <link
+      href="https://cdn.bootcss.com/twitter-bootstrap/4.3.1/css/bootstrap.min.css"
+      rel="stylesheet"
+    />
+
+    <link
+      href="https://cdn.staticfile.org/typo.css/1.1/typo.css"
+      rel="stylesheet"
+    />
+    <link
+      href="https://cdn.bootcss.com/twitter-bootstrap/4.3.1/css/bootstrap.min.css"
+      rel="stylesheet"
+    />
+
+    <link
+      href="https://cdn.staticfile.org/typo.css/1.1/typo.css"
+      rel="stylesheet"
+    />
+    <link
+      href="https://cdn.bootcss.com/twitter-bootstrap/4.3.1/css/bootstrap.min.css"
+      rel="stylesheet"
+    />
+
+    <!--   <link
+      href="https://cdn.jsdelivr.net/gh/masx200/masx200.github.io@4.3.3/main.b9c7ffd191cff11a9b96.css"
+      rel="stylesheet"
+    /> -->
     <script src="https://cdn.bootcss.com/babel-polyfill/7.6.0/polyfill.min.js"></script>
     <script src="https://cdn.jsdelivr.net/gh/masx200/webpack-react-vue-spa-awesome-config@2.4.5/polyfill/dist/polyfill.min.js"></script>
   </head>
