--- a/test/index.html
+++ b/test/index.html
@@ -2,10 +2,10 @@
 
 <html>
   <head>
-    <link
+    <!-- <link
       href="https://cdn.bootcss.com/mui/3.7.1/css/mui.min.css"
       rel="stylesheet"
-    />
+    /> -->
     <link
       href="https://cdn.jsdelivr.net/gh/masx200/masx200.github.io@4.2.2/src/assetscss/github-6556dfa9be535e551ffffaadfecdad99.min.css"
       rel="stylesheet"
@@ -19,19 +19,19 @@
       rel="stylesheet"
     />
 
-    <link
+    <!-- <link
       href="https://cdn.staticfile.org/typo.css/1.1/typo.css"
       rel="stylesheet"
-    />
+    /> -->
     <link
       href="https://cdn.bootcss.com/twitter-bootstrap/4.3.1/css/bootstrap.min.css"
       rel="stylesheet"
     />
 
-    <link
+    <!--  <link
       href="https://cdn.staticfile.org/typo.css/1.1/typo.css"
       rel="stylesheet"
-    />
+    /> -->
     <link
       href="https://cdn.bootcss.com/twitter-bootstrap/4.3.1/css/bootstrap.min.css"
       rel="stylesheet"
