--- a/test/index.html
+++ b/test/index.html
@@ -41,9 +41,11 @@
       href="https://cdn.jsdelivr.net/gh/masx200/masx200.github.io@4.3.3/main.b9c7ffd191cff11a9b96.css"
       rel="stylesheet"
     /> -->
-    <script src="https://cdn.bootcss.com/babel-polyfill/7.6.0/polyfill.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/gh/masx200/webpack-react-vue-spa-awesome-config@2.4.5/polyfill/dist/polyfill.min.js"></script>
-  </head>
+    <script  type="module"src="https://cdn.bootcss.com/babel-polyfill/7.6.0/polyfill.min.js"></script>
+    <script type="module"src="https://cdn.jsdelivr.net/gh/masx200/webpack-react-vue-spa-awesome-config@2.4.5/polyfill/dist/polyfill.min.js"></script>
+
+    <script type="module"src="../polyfill/custom-elements.min.js"></script>  
+</head>
   <body>
     <!-- <script type="module" src="./index2.js"></script> -->
     <div id="root"></div>
