代码输出为ascii_only,代码小优化

--- a/test/index.html
+++ b/test/index.html
@@ -2,6 +2,11 @@
 
 <html>
   <head>
+    <style>
+      * {
+        text-align: center;
+      }
+    </style>
     <!-- <link
       href="https://cdn.bootcss.com/mui/3.7.1/css/mui.min.css"
       rel="stylesheet"
