--- a/test/index.html
+++ b/test/index.html
@@ -60,7 +60,7 @@
     ></script>
 
     <script type="module" src="../polyfill/custom-elements.min.js"></script>
-    <script src="./index-es2015.js" type="module"></script>
+    <script src="./output-es2015.js" type="module"></script>
   </head>
   <body>
     <!-- <script type="module" src="./index2.js"></script> -->
