--- a/test/index.html
+++ b/test/index.html
@@ -1,73 +1,1 @@
-<!DOCTYPE html>
-
-<html>
-  <head>
-    <style>
-      * {
-        text-align: center;
-      }
-    </style>
-    <!-- <link
-      href="https://cdn.bootcss.com/mui/3.7.1/css/mui.min.css"
-      rel="stylesheet"
-    /> -->
-    <link
-      href="https://cdn.jsdelivr.net/gh/masx200/masx200.github.io@4.2.2/src/assetscss/github-6556dfa9be535e551ffffaadfecdad99.min.css"
-      rel="stylesheet"
-    />
-    <link
-      href="https://cdn.jsdelivr.net/gh/masx200/masx200.github.io@4.2.2/src/assetscss/github-frameworks-a2fba223d5af91496cac70d4ec3624df.min.css"
-      rel="stylesheet"
-    />
-    <link
-      href="https://cdn.bootcss.com/twitter-bootstrap/4.3.1/css/bootstrap.min.css"
-      rel="stylesheet"
-    />
-
-    <!-- <link
-      href="https://cdn.staticfile.org/typo.css/1.1/typo.css"
-      rel="stylesheet"
-    /> -->
-    <link
-      href="https://cdn.bootcss.com/twitter-bootstrap/4.3.1/css/bootstrap.min.css"
-      rel="stylesheet"
-    />
-
-    <!--  <link
-      href="https://cdn.staticfile.org/typo.css/1.1/typo.css"
-      rel="stylesheet"
-    /> -->
-    <link
-      href="https://cdn.bootcss.com/twitter-bootstrap/4.3.1/css/bootstrap.min.css"
-      rel="stylesheet"
-    />
-
-    <!--   <link
-      href="https://cdn.jsdelivr.net/gh/masx200/masx200.github.io@4.3.3/main.b9c7ffd191cff11a9b96.css"
-      rel="stylesheet"
-    /> -->
-
-    <script
-      type="module"
-      src="https://cdn.bootcss.com/babel-polyfill/7.6.0/polyfill.min.js"
-    ></script>
-
-    <script
-      type="module"
-      src="https://cdn.jsdelivr.net/gh/masx200/webpack-react-vue-spa-awesome-config@2.4.5/polyfill/dist/polyfill.min.js"
-    ></script>
-
-    <script type="module" src="../polyfill/custom-elements.min.js"></script>
-    <script src="./output-es2015.js" type="module"></script>
-  </head>
-  <body>
-    <!-- <script type="module" src="./index2.js"></script> -->
-    <div id="root"></div>
-
-    <div id="app"></div>
-    <!-- <script type="module" src="./index.js"></script> -->
-    <!--    <script src="./index-es5.js"></script> -->
-  </body>
-</html>
-
-<!-- <script src="https://cdn.staticfile.org/custom-elements/1.2.4/custom-elements.min.js"></script> -->
+<!DOCTYPE html><html><head><style>      * {        text-align: center;      }</style><link      href="https://cdn.jsdelivr.net/gh/masx200/masx200.github.io@4.2.2/src/assetscss/github-6556dfa9be535e551ffffaadfecdad99.min.css"      rel="stylesheet"    /><link      href="https://cdn.jsdelivr.net/gh/masx200/masx200.github.io@4.2.2/src/assetscss/github-frameworks-a2fba223d5af91496cac70d4ec3624df.min.css"      rel="stylesheet"    /><link      href="https://cdn.bootcss.com/twitter-bootstrap/4.3.1/css/bootstrap.min.css"      rel="stylesheet"    /><link      href="https://cdn.bootcss.com/twitter-bootstrap/4.3.1/css/bootstrap.min.css"      rel="stylesheet"    /><link      href="https://cdn.bootcss.com/twitter-bootstrap/4.3.1/css/bootstrap.min.css"      rel="stylesheet"    /><script      type="module"      src="https://cdn.bootcss.com/babel-polyfill/7.6.0/polyfill.min.js"    ></script><script      type="module"      src="https://cdn.jsdelivr.net/gh/masx200/webpack-react-vue-spa-awesome-config@2.4.5/polyfill/dist/polyfill.min.js"    ></script><script type="module" src="../polyfill/custom-elements.min.js"></script><script src="./output-es2015.js" type="module"></script></head><body><div id="root"></div><div id="app"></div></body></html>
