Update and rename test/dist/index.html to test/index.html

--- a/test/index.html
+++ b/test/index.html
@@ -40,11 +40,11 @@
       src="https://cdn.staticfile.org/custom-elements/1.2.4/custom-elements.min.js"
       type="module"
     ></script>
-    <script src="./output-es2015.js" type="module"></script>
+    <script src="./dist/output-es2015.js" type="module"></script>
   </head>
   <body>
     <div id="root"></div>
     <div id="app"></div>
-    <script src="output-es2015.js" type="module"></script>
+    <!--<script src="output-es2015.js" type="module"></script>-->
   </body>
 </html>
