--- a/test/index.html
+++ b/test/index.html
@@ -3,8 +3,9 @@
   <head>
     <style>
       * {
-        text-align: center;
+        text-align: center!important;
       }
+*{font-family:Microsoft Yahei,Helvetica,Tahoma,Arial,PingFang SC,Hiragino Sans GB,Heiti SC,MicrosoftYaHei,WenQuanYi Micro Hei,sans-serif!important}
     </style>
     <link
       href="https://cdn.jsdelivr.net/gh/masx200/masx200.github.io@4.2.2/src/assetscss/github-6556dfa9be535e551ffffaadfecdad99.min.css"
