新增了createVirtualElement和isVirtualdom,给class AttrChange extends HTMLElement添加textContent,innerHTML,innerText的getter,setter,新增function iscomponent(a) ,babel编译成es2015代码, presets: [           [             "@babel/preset-env",             {               corejs: 3,               // useBuiltIns: 'usage',               targets: { esmodules: true }             }           ]

--- a/test/index.html
+++ b/test/index.html
@@ -3,9 +3,13 @@
   <head>
     <style>
       * {
-        text-align: center!important;
+        text-align: center !important;
       }
-*{font-family:Microsoft Yahei,Helvetica,Tahoma,Arial,PingFang SC,Hiragino Sans GB,Heiti SC,MicrosoftYaHei,WenQuanYi Micro Hei,sans-serif!important}
+      * {
+        font-family: Microsoft Yahei, Helvetica, Tahoma, Arial, PingFang SC,
+          Hiragino Sans GB, Heiti SC, MicrosoftYaHei, WenQuanYi Micro Hei,
+          sans-serif !important;
+      }
     </style>
     <link
       href="https://cdn.jsdelivr.net/gh/masx200/masx200.github.io@4.2.2/src/assetscss/github-6556dfa9be535e551ffffaadfecdad99.min.css"
