新增select元素value属性绑定,升级依赖包,添加测试

--- a/test/index.html
+++ b/test/index.html
@@ -4,6 +4,7 @@
     <style>
       * {
         text-align: center !important;
+        user-select: text !important;
       }
       * {
         font-family: Microsoft Yahei, Helvetica, Tahoma, Arial, PingFang SC,
