--- a/test/index.html
+++ b/test/index.html
@@ -1,6 +1,10 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <!-- <link
+      rel="prefetch"
+      href="https://storage.googleapis.com/workbox-cdn/releases/4.3.1/workbox-sw.js"
+    /> -->
     <style>
       * {
         text-align: center !important;
