添加3个缓存,测试成功

--- a/test/index.html
+++ b/test/index.html
@@ -37,7 +37,7 @@
       rel="stylesheet"
     />
     <script
-      type="module"
+      nomodule=""
       src="https://cdn.bootcss.com/babel-polyfill/7.6.0/polyfill.min.js"
     ></script>
 
