把async函数改成了setimmediate

--- a/test/index.html
+++ b/test/index.html
@@ -1,6 +1,10 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <!-- <script>
+      const timelabel = "第一次加载完成";
+      console.time(timelabel);
+    </script> -->
     <!-- <link
       rel="prefetch"
       href="https://storage.googleapis.com/workbox-cdn/releases/4.3.1/workbox-sw.js"
