1.优化代码,添加weakmap,weakset,map,set缓存了,2.utils的set函数兼具Map的set功能和reflect.set功能,get函数兼具Map的get功能和reflect.get功能,,3.缓存css转换的结果,,/*  selectoraddprefix函数返回新对象,不是修改原来的对象*/对于CSSMediaRule的处理,返回新的伪CSSMediaRule对象4.// export const virtualdomsymbol = Symbol("virtualelement"); /* 为了垃圾回收,所以不要给dom元素添加没必要的属性 */,不添加属性virtualdomsymbol,5.组件内部使用的ReactiveState收集工作放到class ReactiveState 的构造函数中,6.判断isVirtualdom,改成weakset方式.7.在createComponent.ts中,当attributes变化时,/* 使用getter来保证每次访问到最新的attribute */,     /* 当属性改变时要跟ReactiveState同步状态 */,优化异步转换css

--- a/test/index.html
+++ b/test/index.html
@@ -11,6 +11,7 @@
     /> -->
     <style>
       * {
+        line-height: normal !important;
         text-align: center !important;
         user-select: text !important;
       }
@@ -32,14 +33,14 @@
       href="https://cdn.bootcss.com/twitter-bootstrap/4.3.1/css/bootstrap.min.css"
       rel="stylesheet"
     />
-    <link
+    <!--     <link
       href="https://cdn.bootcss.com/twitter-bootstrap/4.3.1/css/bootstrap.min.css"
       rel="stylesheet"
     />
     <link
       href="https://cdn.bootcss.com/twitter-bootstrap/4.3.1/css/bootstrap.min.css"
       rel="stylesheet"
-    />
+    /> -->
     <script
       nomodule=""
       src="https://cdn.bootcss.com/babel-polyfill/7.6.0/polyfill.min.js"
