--- a/test/index.html
+++ b/test/index.html
@@ -1,6 +1,14 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <link
+      href="https://cdn.staticfile.org/mui/3.7.1/css/mui.min.css"
+      rel="stylesheet"
+    />
+    <link
+      rel="stylesheet"
+      href="https://cdn.staticfile.org/twitter-bootstrap/4.3.1/css/bootstrap.min.css"
+    />
     <!-- <script>
       const timelabel = "第一次加载完成";
       console.time(timelabel);
@@ -29,16 +37,13 @@
       href="https://cdn.jsdelivr.net/gh/masx200/masx200.github.io@4.2.2/src/assetscss/github-frameworks-a2fba223d5af91496cac70d4ec3624df.min.css"
       rel="stylesheet"
     />
-    <link
-      href="https://cdn.bootcss.com/twitter-bootstrap/4.3.1/css/bootstrap.min.css"
-      rel="stylesheet"
-    />
+
     <!--     <link
-      href="https://cdn.bootcss.com/twitter-bootstrap/4.3.1/css/bootstrap.min.css"
+      href="https://cdn.staticfile.org/mui/3.7.1/css/mui.min.css"
       rel="stylesheet"
     />
     <link
-      href="https://cdn.bootcss.com/twitter-bootstrap/4.3.1/css/bootstrap.min.css"
+      href="https://cdn.staticfile.org/mui/3.7.1/css/mui.min.css"
       rel="stylesheet"
     /> -->
     <script
