--- a/test/index.html
+++ b/test/index.html
@@ -1,6 +1,9 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <!-- <script>
+      window.EventTarget = undefined;
+    </script> -->
     <link
       href="https://cdn.staticfile.org/mui/3.7.1/css/mui.min.css"
       rel="stylesheet"
@@ -46,20 +49,20 @@
       href="https://cdn.staticfile.org/mui/3.7.1/css/mui.min.css"
       rel="stylesheet"
     /> -->
-    <script
+    <!-- <script
       nomodule=""
       src="https://cdn.bootcss.com/babel-polyfill/7.6.0/polyfill.min.js"
-    ></script>
+    ></script> -->
 
-    <script
+    <!-- <script
       type="module"
       src="https://cdn.jsdelivr.net/gh/masx200/webpack-react-vue-spa-awesome-config@2.4.5/polyfill/dist/polyfill.min.js"
-    ></script>
+    ></script> -->
     <!-- <script type="module" src="../polyfill/custom-elements.min.js"></script> -->
-    <script
+    <!-- <script
       src="https://cdn.staticfile.org/custom-elements/1.2.4/custom-elements.min.js"
       type="module"
-    ></script>
+    ></script> -->
     <script src="./dist/output-es2015.js" type="module"></script>
   </head>
   <body>
