--- a/test/index.html
+++ b/test/index.html
@@ -1,47 +1,47 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <!-- <script>
+    <head>
+        <!-- <script>
       window.EventTarget = undefined;
     </script> -->
-    <link
-      href="https://cdn.staticfile.org/mui/3.7.1/css/mui.min.css"
-      rel="stylesheet"
-    />
-    <link
-      rel="stylesheet"
-      href="https://cdn.staticfile.org/twitter-bootstrap/4.3.1/css/bootstrap.min.css"
-    />
-    <!-- <script>
+        <link
+            href="https://cdn.staticfile.org/mui/3.7.1/css/mui.min.css"
+            rel="stylesheet"
+        />
+        <link
+            rel="stylesheet"
+            href="https://cdn.staticfile.org/twitter-bootstrap/4.3.1/css/bootstrap.min.css"
+        />
+        <!-- <script>
       const timelabel = "第一次加载完成";
       console.time(timelabel);
     </script> -->
-    <!-- <link
+        <!-- <link
       rel="prefetch"
       href="https://storage.googleapis.com/workbox-cdn/releases/4.3.1/workbox-sw.js"
     /> -->
-    <style>
-      * {
-        line-height: normal !important;
-        text-align: center !important;
-        user-select: text !important;
-      }
-      * {
-        font-family: Microsoft Yahei, Helvetica, Tahoma, Arial, PingFang SC,
-          Hiragino Sans GB, Heiti SC, MicrosoftYaHei, WenQuanYi Micro Hei,
-          sans-serif !important;
-      }
-    </style>
-    <link
-      href="https://cdn.jsdelivr.net/gh/masx200/masx200.github.io@4.2.2/src/assetscss/github-6556dfa9be535e551ffffaadfecdad99.min.css"
-      rel="stylesheet"
-    />
-    <link
-      href="https://cdn.jsdelivr.net/gh/masx200/masx200.github.io@4.2.2/src/assetscss/github-frameworks-a2fba223d5af91496cac70d4ec3624df.min.css"
-      rel="stylesheet"
-    />
+        <style>
+            * {
+                line-height: normal !important;
+                text-align: center !important;
+                user-select: text !important;
+            }
+            * {
+                font-family: Microsoft Yahei, Helvetica, Tahoma, Arial,
+                    PingFang SC, Hiragino Sans GB, Heiti SC, MicrosoftYaHei,
+                    WenQuanYi Micro Hei, sans-serif !important;
+            }
+        </style>
+        <link
+            href="https://cdn.jsdelivr.net/gh/masx200/masx200.github.io@4.2.2/src/assetscss/github-6556dfa9be535e551ffffaadfecdad99.min.css"
+            rel="stylesheet"
+        />
+        <link
+            href="https://cdn.jsdelivr.net/gh/masx200/masx200.github.io@4.2.2/src/assetscss/github-frameworks-a2fba223d5af91496cac70d4ec3624df.min.css"
+            rel="stylesheet"
+        />
 
-    <!--     <link
+        <!--     <link
       href="https://cdn.staticfile.org/mui/3.7.1/css/mui.min.css"
       rel="stylesheet"
     />
@@ -49,25 +49,25 @@
       href="https://cdn.staticfile.org/mui/3.7.1/css/mui.min.css"
       rel="stylesheet"
     /> -->
-    <!-- <script
+        <!-- <script
       nomodule=""
       src="https://cdn.bootcss.com/babel-polyfill/7.6.0/polyfill.min.js"
     ></script> -->
 
-    <!-- <script
+        <!-- <script
       type="module"
       src="https://cdn.jsdelivr.net/gh/masx200/webpack-react-vue-spa-awesome-config@2.4.5/polyfill/dist/polyfill.min.js"
     ></script> -->
-    <!-- <script type="module" src="../polyfill/custom-elements.min.js"></script> -->
-    <!-- <script
+        <!-- <script type="module" src="../polyfill/custom-elements.min.js"></script> -->
+        <!-- <script
       src="https://cdn.staticfile.org/custom-elements/1.2.4/custom-elements.min.js"
       type="module"
     ></script> -->
-    <script src="./dist/output-es2015.js" type="module"></script>
-  </head>
-  <body>
-    <div id="root"></div>
-    <div id="app"></div>
-    <!--<script src="output-es2015.js" type="module"></script>-->
-  </body>
+        <script src="./dist/es2015.js" type="module"></script>
+    </head>
+    <body>
+        <div id="root"></div>
+        <div id="app"></div>
+        <!--<script src="output-es2015.js" type="module"></script>-->
+    </body>
 </html>
